--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
                 </div>
                 <div class="profile-text">
                     <h1 style="font-family: 'Georgia', serif;">Hi,<br>I'm Yashwanth</h1>
-                    <a href="https://apricot-mil-20.tiiny.site" download="Yashwanth_Ettikala_Resume.pdf" class="btn btn-primary btn-download">My Resume</a>
+                    <a href="resume/Yashwanth_Ettikala_Resume.pdf" download="Yashwanth_Ettikala_Resume.pdf" class="btn btn-primary btn-download">Download My Resume</a>
                 </div>
                 
                 
