--- a/experience.html
+++ b/experience.html
@@ -245,16 +245,13 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Temenos</h5>
-                        <p>Data Analyst<br>Dec 2021 - Jul 2023</p>
+                        <p>Data Analyst<br>Dec 2020 - Jul 2023</p>
                         <ul>
-                            <li>Implemented a highly efficient process leveraging SQL Server and Oracle SQL for verifying and validating transaction details to identify and prevent fraudulent activities.</li>
-
-                            <li>Utilized JIRA for efficient project management and collaborated with global clients to understand needs, leveraging MS Excel and PowerPoint to effectively communicate complex risk data and analysis.</li>
-                            
-                            <li>Conducted comprehensive data analysis to identify patterns in financial transactions, prepared dashboards and reports using risk transaction matrices for country-specific risk ratings, and resolved escalations to ensure client satisfaction.</li>
-                            
-                            <li>Leveraged Advanced Excel (pivot tables, VLOOKUP, SUMIFS) to analyze customer data, leading to 30% higher customer engagement and conversion rates.</li>                            
-
+                            <li>Streamlined SQL Server workflows to validate transactions, reducing fraud and improving data integrity by 40% across 10,000+ transactions.</li>
+                            <li>Automated reporting with Advanced Excel (pivot tables, XLOOKUP, SUMIFS), reducing manual processing time by 30%.</li>
+                            <li>Designed Tableau dashboards, reports, and data tables to monitor risk ratings for 50+ countries, enabling targeted interventions.</li>
+                            <li>Cleaned and analyzed data with Python, assigning risk scores quarterly and improving predictive accuracy by 15%.</li>
+                            <li>Managed risk mitigation projects using JIRA and Agile, ensuring timely updates and seamless global collaboration.</li>                  
                         </ul>
                     </div>
                 </div>
