--- a/education.html
+++ b/education.html
@@ -138,6 +138,8 @@
                                     <ul>
                                         <li>Aug 2023 - May 2025</li>
                                         <li>GPA: 3.6/4</li>
+                                        <li>Relevant Coursework: Data Management and Business Process, Predictive Modelling, Visual Analytics, Data Mining and Business Intelligence, Big Data, Advanced Business Analytics and Project Management, Data Science using Python.</li>
+
                                     </ul>
                                 </div>
                             </div>
