--- a/experience.html
+++ b/experience.html
@@ -231,7 +231,7 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Ananda</h5>
-                        <p>Business Analyst<br>Aug 2024 - Dec 2024</p>
+                        <p>Gen AI Engineer<br>Aug 2024 - Dec 2024</p>
                         <ul>
 <li>Led the design and implementation of an LLM-powered chatbot for trading platforms, utilizing models like Llama, Gemma, and Mistral to enhance real-time decision-making.</li>
 <li>Integrated Retrieval-Augmented Generation (RAG) to improve the chatbot’s response accuracy and relevance, significantly enhancing user interaction across trading platforms.</li>
