--- a/experience.html
+++ b/experience.html
@@ -245,16 +245,32 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Temenos</h5>
-                        <p>Data Analyst<br>Aug 2020 - Jul 2023</p>
+                        <p>Product Analyst<br>Aug 2022 - Jul 2023</p>
                         <ul>
-                            <li>Streamlined SQL Server workflows to validate transactions, reducing fraud and improving data integrity by 40% across 10,000+ transactions.</li>
-                            <li>Automated reporting with Advanced Excel (pivot tables, XLOOKUP, SUMIFS), reducing manual processing time by 30%.</li>
-                            <li>Designed Tableau dashboards, reports, and data tables to monitor risk ratings for 50+ countries, enabling targeted interventions.</li>
-                            <li>Cleaned and analyzed data with Python, assigning risk scores quarterly and improving predictive accuracy by 15%.</li>
-                            <li>Managed risk mitigation projects using JIRA and Agile, ensuring timely updates and seamless global collaboration.</li>                  
-                        </ul>
+    <li>Streamlined SQL Server workflows to validate transactions in the database and monitored the Financial Crime Mitigation (FCM) application, enhancing data integrity and reducing fraud by 40% across 10,000+ transactions while ensuring regulatory compliance for global clients.</li>
+    <li>Managed multiple Temenos T24 modules with a primary focus on FCM-AML and TPH, implementing seamless FCM and T24 integration to optimize transaction flows and enhance operational efficiency in banking environments.</li>
+    <li>Spearheaded Temenos Transact implementation for multiple banks, improving transaction processing efficiency and mitigating operational risk through FCM module implementation, ensuring compliance and security.</li>
+    <li>Debugged code, performed analysis, and provided maintenance documentation along with code improvement recommendations.</li>
+</ul>
+
                     </div>
                 </div>
+
+                <div class="timeline-item">
+                    <div class="item-content">
+                        <h5>Temenos</h5>
+                        <p>Product Analyst Intern<br>Dec 2021 - Aug 2022</p>
+                        <ul>
+    <li>Integrated data from customer, accounts, and transactions using complex SQL joins to enhance reporting efficiency while collaborating with team members and sharing expertise in FCM Product, SaaS, DES, and cloud environments.</li>
+    <li>Optimized customer data analysis using Advanced Excel (Pivot Tables, XLOOKUP, SUMIFS), leading to a 20% boost in customer engagement and strategy execution in marketing conversions.</li>
+    <li>Collaborated with stakeholders to convert business requirements into technical solutions and partnered with the development team to troubleshoot and resolve technical challenges.</li>
+    <li>Generated a company-wide KPI dashboard in FCM to visualize key metrics, reducing manual reporting efforts by 10%.</li>
+</ul>
+
+
+                    </div>
+                </div>
+
 
 
                 
