--- a/experience.html
+++ b/experience.html
@@ -231,13 +231,13 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Ananda</h5>
-                        <p>Gen AI Engineer<br>Aug 2024 - Dec 2024</p>
+                        <p>Business Analyst<br>Aug 2024 - Dec 2024</p>
                         <ul>
-<li>Led the design and implementation of an LLM-powered chatbot for trading platforms, utilizing models like Llama, Gemma, and Mistral to enhance real-time decision-making.</li>
-<li>Integrated Retrieval-Augmented Generation (RAG) to improve the chatbot’s response accuracy and relevance, significantly enhancing user interaction across trading platforms.</li>
-<li>Conducted comprehensive performance evaluations using BLEU, ROUGE, BERT scores, and Cosine similarity, verifying the superiority of our chatbot models through detailed statistical analysis.</li>
-<li>Optimized chatbot systems for high-accuracy tasks, justifying a 20% increase in operational costs for precision-demanding applications in trading.</li>
-<li>Conducted cost-effectiveness analysis of LLM models, establishing Mistral RAG as the optimal choice for balancing high performance with cost-efficiency.</li>
+<li>Identified gaps in business processes through root cause analysis and provided recommendations, leading to a 30% efficiency boost.</li>
+<li>Implemented A/B testing frameworks as a method of data-driven problem solving to assess the impact of marketing strategies, leveraging analytical insights to increase customer engagement by 20%.</li>
+<li>Integrated Retrieval-Augmented Generation (RAG) with LLM models like Llama, Gemma, and Mistral, improving chatbot accuracy, real-time decision-making, and increasing user engagement by 25%.</li>
+<li>Evaluated chatbot performance using BLEU, ROUGE, BERT scores, Cosine similarity, and T-tests, identifying Mistral RAG as the optimal model for cost-efficiency and performance.</li>
+<li>Served as a liaison to streamline communication between sponsors and the team, translating stakeholder feedback into detailed user stories and implementing Agile methodologies using project management tools (JIRA, Confluence) to ensure project alignment.</li>
                         </ul>
                     </div>
                 </div>
@@ -245,12 +245,13 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Temenos</h5>
-                        <p>Product Analyst<br>Aug 2022 - Jul 2023</p>
+                        <p>Data Analyst<br>Oct 2020 - Jul 2023</p>
                         <ul>
-    <li>Streamlined SQL Server workflows to validate transactions in the database and monitored the Financial Crime Mitigation (FCM) application, enhancing data integrity and reducing fraud by 40% across 10,000+ transactions while ensuring regulatory compliance for global clients.</li>
-    <li>Managed multiple Temenos T24 modules with a primary focus on FCM-AML and TPH, implementing seamless FCM and T24 integration to optimize transaction flows and enhance operational efficiency in banking environments.</li>
-    <li>Spearheaded Temenos Transact implementation for multiple banks, improving transaction processing efficiency and mitigating operational risk through FCM module implementation, ensuring compliance and security.</li>
-    <li>Debugged code, performed analysis, and provided maintenance documentation along with code improvement recommendations.</li>
+   <li>Streamlined SQL Server workflows to validate transactions in the database and monitored the Financial Crime Mitigation (FCM) application, enhancing data integrity and reducing fraud by 40% across 10,000+ transactions while ensuring regulatory compliance for global clients.</li>
+<li>Optimized customer data analysis using Advanced Excel (Pivot Tables, XLOOKUP, SUMIFS) to derive strategic insights, leading to a 20% boost in customer engagement and strategy execution in marketing conversions.</li>
+<li>Utilized ETL (Extract, Transform, Load) tools such as Informatica to automate data extraction, transformation, and loading processes.</li>
+<li>Leveraged advanced features of Tableau software to link data from different connections together on one dashboard and to filter data in multiple views at once.</li>
+<li>Managed ad-hoc reporting requests and collaborated with cross-functional stakeholders to design and implement data pipelines, ensuring high data quality and delivering insights that enhanced marketing campaign effectiveness by 15%.</li>
 </ul>
 
                     </div>
@@ -259,12 +260,13 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Temenos</h5>
-                        <p>Product Analyst Intern<br>Dec 2021 - Aug 2022</p>
+                        <p>Data Analyst Intern<br>May 2020 - Oct 2020</p>
                         <ul>
-    <li>Integrated data from customer, accounts, and transactions using complex SQL joins to enhance reporting efficiency while collaborating with team members and sharing expertise in FCM Product, SaaS, DES, and cloud environments.</li>
-    <li>Optimized customer data analysis using Advanced Excel (Pivot Tables, XLOOKUP, SUMIFS), leading to a 20% boost in customer engagement and strategy execution in marketing conversions.</li>
-    <li>Collaborated with stakeholders to convert business requirements into technical solutions and partnered with the development team to troubleshoot and resolve technical challenges.</li>
-    <li>Generated a company-wide KPI dashboard in FCM to visualize key metrics, reducing manual reporting efforts by 10%.</li>
+   <li>Integrated data from customer, accounts, and transactions using complex SQL joins to enhance reporting efficiency while collaborating with team members and sharing expertise in FCM Product, SaaS, DES, and cloud environments.</li>
+<li>Built a Python-based automation script to detect anomalies in AML transaction data, enhancing fraud detection capabilities.</li>
+<li>Generated a company-wide KPI dashboard in Power BI using DAX functions to visualize key metrics, driving faster business insights.</li>
+<li>Implemented statistics-driven approaches for data cleaning on large datasets, ensuring data quality, consistency, integrity, and supporting model development using Pandas, and NumPy libraries in Python.</li>
+<li>Designed machine learning pipelines incorporating NLP workflows using Python libraries (Pandas, NumPy, Scikit-learn), improving prediction accuracy with models like Linear Regression, Random Forest, and sentiment analysis; deployed using CI/CD integration.</li>
 </ul>
 
 
