--- a/experience.html
+++ b/experience.html
@@ -245,13 +245,12 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Temenos</h5>
-                        <p>Data Analyst<br>Oct 2020 - Jul 2023</p>
+                        <p>Product Analyst<br>Aug 2022 - Jul 2023</p>
                         <ul>
-   <li>Streamlined SQL Server workflows to validate transactions in the database and monitored the Financial Crime Mitigation (FCM) application, enhancing data integrity and reducing fraud by 40% across 10,000+ transactions while ensuring regulatory compliance for global clients.</li>
-<li>Optimized customer data analysis using Advanced Excel (Pivot Tables, XLOOKUP, SUMIFS) to derive strategic insights, leading to a 20% boost in customer engagement and strategy execution in marketing conversions.</li>
-<li>Utilized ETL (Extract, Transform, Load) tools such as Informatica to automate data extraction, transformation, and loading processes.</li>
-<li>Leveraged advanced features of Tableau software to link data from different connections together on one dashboard and to filter data in multiple views at once.</li>
-<li>Managed ad-hoc reporting requests and collaborated with cross-functional stakeholders to design and implement data pipelines, ensuring high data quality and delivering insights that enhanced marketing campaign effectiveness by 15%.</li>
+  <li>Streamlined SQL Server workflows to validate transactions in the database and monitored the Financial Crime Mitigation (FCM) application, enhancing data integrity and reducing fraud by 40% across 10,000+ transactions while ensuring regulatory compliance for global clients.</li>
+<li>Managed multiple Temenos T24 modules with a primary focus on FCM-AML, implementing seamless FCM and T24 integration to optimize transaction flows and enhance operational efficiency in banking environments.</li>
+<li>Spearheaded Temenos Transact implementation for multiple banks, improving transaction processing efficiency and mitigating operational risk through FCM module implementation, ensuring compliance and security.</li>
+<li>Debugged code, performed analysis, and provided maintenance documentation along with code improvement recommendations.</li>
 </ul>
 
                     </div>
@@ -260,13 +259,12 @@
                 <div class="timeline-item">
                     <div class="item-content">
                         <h5>Temenos</h5>
-                        <p>Data Analyst Intern<br>May 2020 - Oct 2020</p>
+                        <p>Data Analyst Intern<br>Dec 2021 - Aug 2022</p>
                         <ul>
    <li>Integrated data from customer, accounts, and transactions using complex SQL joins to enhance reporting efficiency while collaborating with team members and sharing expertise in FCM Product, SaaS, DES, and cloud environments.</li>
-<li>Built a Python-based automation script to detect anomalies in AML transaction data, enhancing fraud detection capabilities.</li>
-<li>Generated a company-wide KPI dashboard in Power BI using DAX functions to visualize key metrics, driving faster business insights.</li>
-<li>Implemented statistics-driven approaches for data cleaning on large datasets, ensuring data quality, consistency, integrity, and supporting model development using Pandas, and NumPy libraries in Python.</li>
-<li>Designed machine learning pipelines incorporating NLP workflows using Python libraries (Pandas, NumPy, Scikit-learn), improving prediction accuracy with models like Linear Regression, Random Forest, and sentiment analysis; deployed using CI/CD integration.</li>
+<li>Optimized customer data analysis using Advanced Excel (Pivot Tables, XLOOKUP, SUMIFS), leading to a 20% boost in customer engagement and strategy execution in marketing conversions.</li>
+<li>Collaborated with stakeholders to convert business requirements into technical solutions and partnered with the development team to troubleshoot and resolve technical challenges.</li>
+<li>Generated a company-wide KPI dashboard in FCM to visualize key metrics, reducing manual reporting efforts by 10%.</li>
 </ul>
 
 
